5LINX fixes
Fixed issue with fonts being too big on various screen sizes.

--- a/src/apps/common/static/less/affiliates/five-linx/480.less
+++ b/src/apps/common/static/less/affiliates/five-linx/480.less
@@ -340,7 +340,7 @@ body {
 
 .call-box {
     p {
-        font-size: 24px;
+        font-size: 16px;
     }
 }
 
