--- a/src/apps/common/static/less/affiliates/five-linx/768.less
+++ b/src/apps/common/static/less/affiliates/five-linx/768.less
@@ -411,14 +411,15 @@ body {
         width: 35%;
         margin-top: 15px;
         h1 {
-            font-size: 20px;
+            font-size: 18px;
         }
         h2 {
             font-size: 14px;
             line-height: 22px;
         }
         p {
-            font-size: 14px;
+            font-size: 12px;
+            line-height: 16px;
         }
     }
 }
