--- a/src/apps/common/static/less/affiliates/five-linx/960.less
+++ b/src/apps/common/static/less/affiliates/five-linx/960.less
@@ -506,11 +506,14 @@ body {
 #hero {
     .intro {
         h1 {
-            font-size: 32px;
+            font-size: 24px;
         }
         h2 {
             font-size: 22px;
             line-height: 30px;
+        }
+        p {
+            font-size: 14px;
         }
     }
 }
