--- a/src/apps/common/static/less/affiliates/five-linx/redesign.less
+++ b/src/apps/common/static/less/affiliates/five-linx/redesign.less
@@ -255,7 +255,7 @@ hr{
         text-align: left;
         width: 50%;
         h1 {
-            font-size: 36px;
+            font-size: 28px;
             font-weight: bold;
             color: @blue;
             margin: 0 !important;
@@ -268,9 +268,9 @@ hr{
             margin-top: 0;
         }
         p {
-            font-size: 22px;
+            font-size: 18px;
             color: #333;
-            line-height: 28px;
+            line-height: 24px;
         }
     }
 }
@@ -374,6 +374,13 @@ hr{
     overflow: hidden;
     .container {
         border-top: 1px solid @gray-lighter;
+        .leftCol {
+            #call-us {
+                p {
+                    line-height: 20px;
+                }
+            }
+        }
     }
     .leftCol {
         float: left;
